  - remove touch() call that made the compiled-template's timestamp the
    same as the source-template's one. (messju)
  - add assign attribute to html_checkboxes and html_radios
    (pcg, Monte)
  - remove non-xhtml conformant tag from mailto function
    (tacker, Monte)
  - handle date_format codes %e, %T and %D for windows (tip,
    Monte)
  - fix unnecessary call to smarty_core_get_include_path() inside
    Smarty::_get_auto_filename() (c960657, messju)
  - add error-messages when anything else than an identifier is passed
    to foreach's key- or item-attribute (messju)
  - fix handling of digits inside tagnames (messju)
  - fix escaping of backslashes in Smarty_Compiler::_quote_replace() (messju)

Version 2.6.3 (June 16, 2004)
-----------------------------

  - added escapement of '</' to '<\/' in escape:javascript
    modifier (c960657, Monte)
  - added obfuscation of protocol-string in {mailto} when using hex-
    encoding (bharat, messju)
  - enhanced auto-generated filenames for templates_c and cache (messju)
  - add 'nonstd' to escape modifier for escaping non-std chars,
    such as ms doc quote (Monte)
  - adjusted textformat to not output wrap chars after last para
    (Monte)
  - use tempnam() instead of unqid() to create better temporary files in
    smarty_core_write_file() (xces, messju)
  - add 'mail' to escape modifier for safe display of e-mail
    addresses (Monte)
  - add cycle function attribute "reset" to english docs (Monte)
  - enhanced support of numeric constants as variable-expressions (messju)
  - add case decentity to smarty_modifier_escape() (Konstantin A. Pelepelin,
    messju)
  - make smarty_core_write_compiled_include() php5-aware (messju)
  - removed unused functionality to load a subset of lines from a file (messju)
  - fix is_secure() should only check if a file is_readable, not if
    the directory where it is in is readable (sagi, messju)
  - fix problem displaying debug console when $default_resource_type